public/resources/css/styling.css
* {
    font-family: 'Ubuntu', 'Titillium Web', sans-serif;
}

html {
    overflow-x: hidden;
    overflow-y: hidden;
}

body {
    height: 100vh;
    margin: 0;
}

.topnav {
    background-color: transparent;
    display: flex;
    justify-content: space-between;
    font-weight: bold;
    z-index: 5;
    position: fixed;
    left: 0;
    right: 0;
    padding: 10px 20px;
    flex-wrap: wrap;
}

.topnav a {
    padding: 7px !important;
    color: black;
    text-align: center;
    padding: 14px 14px;
    text-decoration: none;
    transition: all .35s ease;
    font-size: 17px;
    border-bottom: solid transparent 2px;
}

.topnav a:hover {
    border-bottom-color: black;
}


#background {
    position: relative;
    height: 100vh;
    margin: 0;
    padding: 0;
}

#section-container {
    position: absolute;
    overflow-y: scroll;
    height: 100%;
}

.section {
    display: flex;
    height: 100vh;
    position: relative;
}

.header {
    width: 100%;
    text-align: center;
    text-justify: center;
    /* width: 10%; */
    padding: 40px;
}

.header hr {
    border: 0;
    border-bottom: 2px dashed black;
    width: 50%;
}

#home {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
}

#headshot {
    vertical-align: 50%;
    height: 40%;
    border-bottom: 0 none;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
    padding: 10px;
}

#about {
    height: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
}

#funny {
    width: 550px;
    height: auto;
    border-bottom: 0 none;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
    padding: 5px;
    display: block;
    margin: 0 auto;
}

#about #paragraphs div {
    text-align: center;
}

#about #paragraphs p {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    font-size: 22px;
}

#experience {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
}

#exp-set {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.exp-card {
    margin: 20px;
    text-align: center;
}

.exp-card img {
    height: 100px;
    display: block;
    margin: auto;
}

.exp-card h4, h5 {
    margin-top: 20px;
    margin-bottom: 10px;
}

.exp-card ul {
    text-align: left;
}

